# gui

./: .gitmodules  CMakeLists.txt  README.md  config.lua
interface/: addons.txt  ui.def
interface/login/: addon.lua  addon.xml  login.toc
interface/scroll_test/: addon.xml  templates.xml
interface/slider_test/: templates.xml
interface/utils/: utils.toc
interface/utils/buttonTemplate/: button.xml
interface/utils/editBoxTemplate/: editBox.xml
interface/utils/frameTemplate/: dialog.xml  resizableDialog.xml  staticDialog.xml
lib/lxgui/include/lxgui/: lxgui.hpp
src/: main.cpp  main2.cpp
