cmake_minimum_required(VERSION 3.10)
set(PROJECTNAME mmo-ui) 
project(${PROJECTNAME})

set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${PROJECT_SOURCE_DIR}/lib/lxgui/cmake/Modules")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR})
add_executable(${PROJECTNAME} src/main.cpp 
                              src/common/common.cpp)
add_definitions(-std=c++17)

set(LXGUI_BUILD_TEST FALSE)
set(LXGUI_BUILD_GUI_SDL_IMPL TRUE) 
set(LXGUI_BUILD_GUI_SFML_IMPL FALSE) 
set(LXGUI_BUILD_INPUT_SFML_IMPL FALSE)

set(LXGUI_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/lib/lxgui/include/lxgui)
set(LXGUI_SOL_INCLUDE_DIR ${CMAKE_SOURCE_DIR}/lib/lxgui/sol2)
set(LXGUI_ROOT ${CMAKE_SOURCE_DIR}/lib/lxgui)

add_subdirectory(lib/plog)

message("AAAAAAAAAAAAAAAAAAAA") 
find_package(lxgui 2) 
message("AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA")
find_package(Lua REQUIRED)
find_package(Freetype)
find_package(PNG)
find_package(ZLIB)
find_package(GLEW)
find_package(OpenGL)
find_package(SDL2)
find_package(SDL2_image)                   
find_package(SDL2_ttf)

include_directories(${LUA_INCLUDE_DIR})
include_directories(${LXGUI_INPUT_SDL_INCLUDE_DIRS})
include_directories(${CMAKE_SOURCE_DIR}/lib/lxgui/include)
include_directories(${CMAKE_SOURCE_DIR}/lib/lxgui/sol2/include)
include_directories(${PROJECT_SOURCE_DIR}/src/common)

target_link_libraries(${PROJECTNAME}  lxgui-sfml)
target_link_libraries(${PROJECTNAME}  lxgui-gl)
target_link_libraries(${PROJECTNAME}  ${FREETYPE_LIBRARY})
target_link_libraries(${PROJECTNAME}  ${PNG_LIBRARY})
target_link_libraries(${PROJECTNAME}  ${ZLIB_LIBRARY})
target_link_libraries(${PROJECTNAME}  ${OPENGL_LIBRARY})
target_link_libraries(${PROJECTNAME}  ${LUA_LIBRARIES})
target_link_libraries(${PROJECTNAME}  lxgui-input-sfml)
target_link_libraries(${PROJECTNAME}  lxgui)
target_link_libraries(${PROJECTNAME}  lxgui-luapp)
target_link_libraries(${PROJECTNAME}  lxgui-xml)
target_link_libraries(${PROJECTNAME}  lxgui-utils)


message("a_______________________________")
message(${LXGUI_INCLUDE_DIR})
message(${LXGUI_ROOT})
message(${LXGUI_LIBRARY}) 
message(${LXGUI_LIBRARIES})
message(${LXGUI_INCLUDE_DIRS}) 
message("a______________________________________") 

if(WINDOWS AND MSVC)
	target_link_libraries(${PROJECTNAME} user32)
endif()
if(UNIX AND NOT APPLE)
	target_link_libraries(${PROJECTNAME} X11 m stdc++ stdc++fs)
endif()

